--- a/wfPanelSlider2.html
+++ b/wfPanelSlider2.html
@@ -19,9 +19,12 @@ const blendZ = cameraZ - panelDistanceZ * 0.25;
 const minZ =  blendZ - panelDistanceZ * 0.25;
 const maxZ = cameraZ + panelDistanceZ * (rowsSize + 0.25);
 const contDomElement = document.body;
+// const contDomElement = document.querySelectorAll(".canvas_container")[0];
+const titleElement = document.querySelectorAll("h1.top_heading")[0];
 var canvasSize = {x: contDomElement.clientWidth, y:contDomElement.clientHeight };
 const textureLoader = new THREE.TextureLoader();
 THREE.Cache.enabled = true;
+var lastHoveredObject = null;
 
 // var items = getCmsItems('64a26bea7b774d01d189a452', 0, 99);
 var items = getItemsFromContainer('.item_block', '.item_txt', '.item_img');
@@ -74,6 +77,7 @@ camera.lookAt(0, 0, 0);
 // Event listener for mouse wheel
 document.addEventListener('wheel', handleMouseWheel);
 document.addEventListener('mouseup', handleMouseUp);
+document.addEventListener('mousemove', handleMouseMove);
 
 // Mouse wheel event handler
 function handleMouseWheel(event) {
@@ -107,6 +111,8 @@ function handleMouseWheel(event) {
 		}
 	})
   });
+
+  handleMouseMove(event);
 }
 
 function handleResize(event) {
@@ -130,6 +136,7 @@ function setImagePicture(panel) {
 		panel.imageIndex = imageIndex;
 		const imagePath = items[imageIndex].image;
 		panel.imagePath = imagePath;
+		panel.text = items[imageIndex].text;
 		textureLoader.load(imagePath, function(image) {
 			const imageMaterial = new THREE.MeshBasicMaterial({
 			map: textureLoader.load(imagePath),
@@ -202,6 +209,24 @@ function handleMouseUp(event) {
 	console.log(obj);
 }
 
+function handleMouseMove(event) {
+	var obj = getItersectedItem(event);
+	if (obj) {
+		if (obj !== lastHoveredObject) {
+			console.log(`Hovered ${obj.id} userIdx=${obj.userIndex} name=${obj.text}`);
+			lastHoveredObject = obj;
+			if (titleElement) {
+				$(titleElement).text(obj.text);
+			}
+		}
+	} else if (lastHoveredObject) {
+		console.log(`Off ${lastHoveredObject.id}`);
+		lastHoveredObject = null;
+		$(titleElement).text("");
+	}
+	// console.log(obj);
+}
+
 function getItersectedItem(event) {
 	// Calculate mouse position in normalized device coordinates
 	const mouse = new THREE.Vector2();
@@ -213,15 +238,15 @@ function getItersectedItem(event) {
 	raycaster.setFromCamera(mouse, camera);
 
 	// Find intersecting objects
-	const intersects = raycaster.intersectObjects(scene.children[0].children, false);
+	const intersects = raycaster.intersectObjects(scene.children, false);
 
 	// Check if any object was clicked
 	if (intersects.length > 0) {
 		const itersectedObj = intersects[0].object;
-		console.log(`Object ${itersectedObj.id} clicked: userIdx=${itersectedObj.userIndex} name=${itersectedObj.name}`);
-		if (itersectedObj.slide) {
-			itersectedObj.slide.material = slideMaterialRed;
-		}
+		// console.log(`Object ${itersectedObj.id} clicked: userIdx=${itersectedObj.userIndex} name=${itersectedObj.text}`);
+		// if (itersectedObj.slide) {
+		// 	itersectedObj.slide.material = slideMaterialRed;
+		// }
 		return itersectedObj;
 	}
 	return null;
