--- a/wfPanelSlider2.html
+++ b/wfPanelSlider2.html
@@ -3,7 +3,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r132/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three/examples/js/controls/OrbitControls.js"></script>
 <script>
-	const stkn = '4a1bef32edf1e429a33342b3a8c5a6bbac9f5086097851c6c49e81a97f3b7acf';
+	const stkn = '<token>';
   
   // Create the realm with 100 panels
 const numPanels = 10;
