--- a/wfPanelSlider2.html
+++ b/wfPanelSlider2.html
@@ -1,7 +1,7 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r132/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three/examples/js/controls/OrbitControls.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/three/examples/js/controls/OrbitControls.js"></script> -->
 <script>
   
   // Create the realm with 100 panels
