--- a/wfPanelsSliderFinal.html
+++ b/wfPanelsSliderFinal.html
@@ -1,7 +1,7 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r132/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three/examples/js/controls/OrbitControls.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/three/examples/js/controls/OrbitControls.js"></script> -->
 <script>
   
   // Create the realm with 100 panels
@@ -47,8 +47,13 @@ document.body.appendChild(renderer.domElement);
 window.addEventListener('resize', handleResize, false);
 
 // Set up controls to navigate through the panels
-const controls = new THREE.OrbitControls(camera, renderer.domElement);
-controls.enableZoom = false; // Disable zooming
+// const controls = new THREE.OrbitControls(camera, renderer.domElement);
+// controls.enableZoom = false; // Disable zooming
+// controls.enablePan = false; // Disable panning
+// controls.autoRotate = false; // Enable auto-rotation
+// controls.minPolarAngle = Math.PI/2;
+// controls.maxPolarAngle = Math.PI/2;
+
 
 // Create an array to store the panels
 const rows = [];
@@ -154,7 +159,7 @@ function handleResize(event) {
 // Render loop
 function animate() {
   requestAnimationFrame(animate);
-  controls.update(); // Update controls in each frame
+//   controls.update(); // Update controls in each frame
   renderer.render(scene, camera);
 }
 
@@ -280,7 +285,7 @@ function getItersectedItem(event) {
 		setTitle(titleElement, "");
 //				parameters: initial list, items-prefix, container-class, objext with fld:item-class pairs.
     items = getItemsFromContainer(items, 'building', '.building_cont', {
-      text: '.item_txt', 
+      text: '.item_text', 
       panelImage: '.item_image',
       slug: '.item_slug'});
 		initPanels();
