--- a/wfDestBldgsFinal.html
+++ b/wfDestBldgsFinal.html
@@ -4,7 +4,6 @@
 
 var items = [];
 var currItem = 0;
-var buttonsSet = 0;
 const dispMapping = {
 			memoryRT: '.memory_disp', 
 			city: '.city_main_memory_disp', 
@@ -60,28 +59,22 @@ function setDisplay(items, currItem, textFlds, rtFlds, buttonFlds, boolFlds, map
 			$(eTrue).hide(100);
 		}
 	}
-	if (!buttonsSet) {
-		buttonsSet = 1;
-		const ep = $(mapping[buttonFlds[0]]);
-		const en = $(mapping[buttonFlds[1]]);
-		$(ep).off('click');
-		$(ep).on('click', ()=>{
+}
+
+function nextMemory() {
 			currItem -= 1;
 			console.log("Prev:", currItem);
 			update();
-		});
-		$(en).off('click');
-		$(en).on('click', ()=>{
-			currItem += 1;
-			console.log("Next:", currItem);
+}
+function prevMemory() {
+			currItem -= 1;
+			console.log("Prev:", currItem);
 			update();
-		});
-	}
 }
 
 function update() {
 	setDisplay(items,
-	currItem, 
+		currItem, 
 		['city', 'name', 'state', 'memoNum', 'memoOwner', 'memoryType'], 
 		['memoryRT'], 
 		['btnPrev', 'btnNext'], 
@@ -90,7 +83,7 @@ function update() {
 }
 
 //	parameters: initial list, items-prefix, container-class, objext with fld:item-class pairs.
-function getItemsFromContainer(init, userParam, containerClass, valueClassObj) {
+function getItemsFromContainer(init, userParam, containerClass, valueClassObj, getHtml) {
   var items = [].concat(init);
   var i = 0;
   $(containerClass).each(function() {
@@ -101,7 +94,11 @@ function getItemsFromContainer(init, userParam, containerClass, valueClassObj) {
     	var imgval = null;
 		var attr = null;
 		$(elem).each( (inx, e) => {
-			txtval = txtval || $(e).text();
+			if (getHtml) {
+				txtva = $(e).html();
+			} else {
+				txtval = txtval || $(e).text();
+			}
     		imgval = imgval || $(e).attr('src');
 			attr = attr || e.getAttribute('slug');
 		})
@@ -122,7 +119,6 @@ function getItemsFromContainer(init, userParam, containerClass, valueClassObj) {
 //				parameters: initial list, items-prefix, container-class, objext with fld:item-class pairs.
 	window.addEventListener('load', () => {
 		items = getItemsFromContainer(items, 'building', '.memo_info_cont', {
-			memoryRT: '.memory.code', 
 			city: '.building_city_main_memory', 
 			name: '.title_name_main_memory',
 			state: '.building_state_title', 
@@ -130,7 +126,10 @@ function getItemsFromContainer(init, userParam, containerClass, valueClassObj) {
 			memoOwner: '.memory_owner',
 			isPrivate: '.memo_ispublic.w-condition-invisible',
 			memoryType: '.memo_type'
-		});
+		}, false);
+		items = getItemsFromContainer(items, 'building', '.memo_info_cont', {
+			memoryRT: '.memory.code'
+		}, true);
 		update();
 	})
 </script>
